2002-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-accept-japanese-characters): Don't call the external
	command when compiling.
	(examining the value for `w3m-command'): Ditto.

2002-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map): Use the key `(control space)'
	instead of `C- ' for the command `w3m-history-store-position'
	under XEmacs.

2002-06-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el (w3mhack-nonunix-lispdir): New option.
	(w3mhack-nonunix-icondir): Ditto.
	(w3mhack-nonunix-dryrun): Ditto.
	(w3mhack-nonunix-install): New function.

2002-06-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (DOCS): Add `TIPS'.

2002-06-26  Ando Tsutomu  <ando-tom@ff.iij4u.or.jp>

	* w3m-weather.el (w3m-weather-completion-table): Fix typo.

2002-06-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-info-like-map): Remove redundant code.

2002-06-27  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-fontify-anchors): Put `w3m-name-anchor' property to
	point-max().
	(w3m-fontify): Remove `w3m-name-anchor' handling.
	(w3m-search-name-anchor): Move in the screen.

2002-06-26  Tadashi Watanabe  <watanabe@sigmaitec.co.jp>

	* w3m.el (w3m-info-like-map): Don't use FSF Emacs style key format
	for XEmacs.

2002-06-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (toplevel): Stricten the pattern to detect w3m version.
	(w3m-info-like-map): Changed key bindings of `w3m-shift-left' and
	`w3m-shift-right'.

2002-06-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-use-ange-ftp): Chenged its default value to nil.

2002-06-21  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-w3m-retrieve-1): Specify -no-cookie option only when
	the w3m command is configured to accept it.

2002-06-03  Hidetaka Iwai <tyuyu@mb6.seikyou.ne.jp>

	* sb-texfaq.el (shimbun-texfaq-group-path-alist): Fix path
	to get latest articles.

2002-06-20  Yuuichi Teranishi  <teranisi@gohome.org>
